Persisted z-index on activating an element, fixes #9.

--- a/src/app/shared/component/elements/element/element.component.scss
+++ b/src/app/shared/component/elements/element/element.component.scss
@@ -6,9 +6,13 @@
 
   @include activeElement;
 
+  &--active,
+  &.cdk-drag-dragging {
+    z-index: 10;
+  }
+
   &.cdk-drag-dragging {
     cursor: grabbing !important;
-    z-index: 10;
   }
 
   &__head {
